apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__tests__authenticated_request.snap
---
source: apollo-router/src/plugins/authorization/mod.rs
expression: response
---
{
  "data": {
    "orga": {
      "id": "1",
      "creatorUser": {
        "id": "0",
        "name": "Ada",
        "phone": "1234"
      }
    }
  }
}
