apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__tests__errors_in_extensions.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
expression: response
---
{
  "data": {
    "orga": {
      "id": "1",
      "creatorUser": null
    }
  },
  "extensions": {
    "authorizationErrors": [
      {
        "message": "Unauthorized field or type",
        "path": [
          "orga",
          "creatorUser"
        ],
        "extensions": {
          "code": "UNAUTHORIZED_FIELD_OR_TYPE"
        }
      }
    ]
  }
}
