apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__tests__partial_filter_leaving_no_executable_work.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
expression: body
---
{
  "data": {
    "currentUser": null
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "currentUser",
        "phone"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
