apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__tests__scopes_directive_reject_unauthorized.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
expression: response
---
{
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "creatorUser"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
